--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,18 +11,32 @@ services:
     depends_on:
       - mysql
       - php
+    restart: unless-stopped
   php:
     build:
       context: dockerfiles
       dockerfile: php.Dockerfile
     volumes:
       - ./src:/var/www/laravel
+    restart: unless-stopped
   mysql:
     image: mysql:8.0
     ports:
       - "3306:3306"
     env_file:
       - env/mysql.env
+    volumes:
+      - mysql_data:/var/lib/mysql
+    restart: unless-stopped
+  pgsql:
+    image: postgres
+    env_file:
+      - env/pgsql.env
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgsql_data:/var/lib/postgresql
+    restart: unless-stopped
 
   composer:
     build:
