--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgsql_data:/var/lib/postgresql
+      - pgsql_data:/var/lib/postgresql/data
     restart: unless-stopped
 
   composer:
